syntax = "proto3";

package model.item;

import "item/item.proto";

enum ArmorType {
  HEAVY = 0;
  LIGHT = 1;
  CLOTH = 2;
  SHIELD = 3;
  HEAD = 4;
  ARM = 5;
  FOOT = 6;
}

message Armor {
  Item item = 1;
  int64 def = 2;
  int64 mdf = 3;
  ArmorType typ = 4;
}
